Remove JVM tuning tab for 1.8 stabilisation.
The tuning UI and persistence remain on branch 1.8-backup-tune4. Running
Apps
per-application tune and JDK assignments are unchanged on 1.8.